Bug 498620 - Saved search folder is not visible in left folder pane or open-able in right pane immediately after saving, r=dietrich