toolkit/components/places/src/nsNavHistoryResult.cpp
@@ -2092,8 +2092,9 @@ nsNavHistoryQueryResultNode::CanExpand()
   if (IsContainersQuery())
     return PR_TRUE;
 
-  // if we are child of an ExcludeItems root, we should not expand
-  if (mResult && mResult->mRootNode->mOptions->ExcludeItems())
+  // If we are child of an ExcludeItems parent or root, we should not expand.
+  if ((mResult && mResult->mRootNode->mOptions->ExcludeItems()) ||
+      (mParent && mParent->mOptions->ExcludeItems()))
     return PR_FALSE;
 
   nsNavHistoryQueryOptions* options = GetGeneratingOptions();
@@ -3482,6 +3483,10 @@ nsNavHistoryFolderResultNode::OnItemAdded(PRInt64 aItemId,
 {
   NS_ASSERTION(aParentFolder == mItemId, "Got wrong bookmark update");
 
+  PRBool excludeItems = (mResult && mResult->mRootNode->mOptions->ExcludeItems()) ||
+                        (mParent && mParent->mOptions->ExcludeItems()) ||
+                        mOptions->ExcludeItems();
+
   // here, try to do something reasonable if the bookmark service gives us
   // a bogus index.
   if (aIndex < 0) {
@@ -3489,15 +3494,10 @@ nsNavHistoryFolderResultNode::OnItemAdded(PRInt64 aItemId,
     aIndex = 0;
   }
   else if (aIndex > mChildren.Count()) {
-    PRBool excludeItems = (mResult && mResult->mRootNode->mOptions->ExcludeItems()) ||
-                          (mParent && mParent->mOptions->ExcludeItems()) ||
-                          mOptions->ExcludeItems();
-    if (excludeItems &&
-        (aItemType == nsINavBookmarksService::TYPE_BOOKMARK ||
-         aItemType == nsINavBookmarksService::TYPE_SEPARATOR))
-      return NS_OK;
-
-    NS_NOTREACHED("Invalid index for item adding: greater than count");
+    if (!excludeItems) {
+      // Something wrong happened while updating indexes.
+      NS_NOTREACHED("Invalid index for item adding: greater than count");
+    }
     aIndex = mChildren.Count();
   }
 
@@ -3520,7 +3520,7 @@ nsNavHistoryFolderResultNode::OnItemAdded(PRInt64 aItemId,
   }
 
   if (aItemType != nsINavBookmarksService::TYPE_FOLDER &&
-      !isQuery && mOptions->ExcludeItems()) {
+      !isQuery && excludeItems) {
     // don't update items when we aren't displaying them, but we still need
     // to adjust bookmark indices to account for the insertion
     ReindexRange(aIndex, PR_INT32_MAX, 1);
@@ -3725,7 +3725,10 @@ NS_IMETHODIMP
 nsNavHistoryFolderResultNode::OnItemVisited(PRInt64 aItemId,
                                             PRInt64 aVisitId, PRTime aTime)
 {
-  if (mOptions->ExcludeItems())
+  PRBool excludeItems = (mResult && mResult->mRootNode->mOptions->ExcludeItems()) ||
+                        (mParent && mParent->mOptions->ExcludeItems()) ||
+                        mOptions->ExcludeItems();
+  if (excludeItems)
     return NS_OK; // don't update items when we aren't displaying them
   if (! StartIncrementalUpdate())
     return NS_OK;
